2008-02-23  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/goom2k1/Makefile.am:
	* gst/goom2k1/gstgoom.c:

	Rename the installed library, and don't register the same 
	GType name as the new goom.

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* ext/taglib/Makefile.am:
	  Check for and define ERROR_CXXFLAGS and use them when building
	  C++ code (#516509).

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/gstgoom.c: (goom_debug), (plugin_init):
	* gst/goom/plugin_info.c: (goom_debug), (GST_CAT_DEFAULT),
	  (setOptimizedMethods):
	  Call oil_init(), otherwise oil_get_cpu_flags() won't return
	  anything useful. Export goom debug category so we can get
	  rid of the VERBOSE define and the printfs.

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/goomsl_heap.c: (align_it):
	* gst/goom/plugin_info.c: (setOptimizedMethods):
	  Compile fixes for x86-64.

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* gst/goom/Makefile.am: Don't compile lex or yacc outputs
	with warnings, but add other CFLAGS

	* gst/goom/goomsl.c (gsl_instr_set_namespace),
	(gsl_instr_add_param), (iflow_execute), (gsl_enternamespace),
	(calculate_labels), (gsl_read_file):
	* gst/goom/goomsl_lex.l:
	* gst/goom/goomsl_yacc.y:
	* gst/goom/plugin_info.c: Remove a few live printf, and
	fprintf, replace exit() calls with g_assert_not_reached()
	if it not optimal for a library

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* gst/goom/Makefile.am: Remove the warnings being disabled,
	fix linkage on x86, spotted by Sebastian Dröge
	<slomo@circular-chaos.org>

	* gst/goom/convolve_fx.c (convolve_init),
	(create_output_with_brightness), (convolve_apply):
	* gst/goom/filters.c (zoomFilterVisualFXWrapper_create):
	* gst/goom/goomsl.c:
	* gst/goom/ifs.c (ifs_update), (ifs_visualfx_create):
	* gst/goom/plugin_info.c:
	* gst/goom/tentacle3d.c (tentacle_fx_create):
	Fix warnings, and disable the motifs in the convolve_fx