@@ -1,3 +1,8 @@
+2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/jpeg/gstjpeg.c: (plugin_init):
+	Remove (commented out) smoke typefinder. This is in base now.
+
 2008-02-23  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* gst/goom2k1/Makefile.am:
